chore: replace all the references of cookieConsentManager

--- a/packages/sanity-suite/public/v3/dataResidency/index-cdn.html
+++ b/packages/sanity-suite/public/v3/dataResidency/index-cdn.html
@@ -93,10 +93,9 @@
         configUrl: '__CONFIG_SERVER_HOST__',
         destSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
         pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins',
-        cookieConsentManager: {
-          oneTrust: {
-            enabled: true,
-          },
+        consentManagement: {
+          enabled: true,
+          provider: 'oneTrust'
         },
         storage: {
           migrate: true
