--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -83,14 +83,6 @@
         //     maxSize: 5 * 1024, // 5KB
         //   },
         // },
-        // cookieConsentManager: {
-        //   // oneTrust: {
-        //   //   enabled: true,
-        //   // },
-        //   ketch: {
-        //     enabled: true,
-        //   }
-        // }
         // useBeacon: true,
         // beaconQueueOptions: {
         //   flushQueueInterval: 10 * 1000,
@@ -122,6 +114,13 @@
           //     type: 'cookieStorage',
           //   },
           // },
+        // },
+        // consentManagement: {
+        //   enabled: true,
+        //   provider: "custom",
+        // },
+        // preConsent: {
+        //   enabled: true
         }
         // plugins: [
         //   'StorageEncryption',
