--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -120,7 +120,10 @@
         //   provider: "custom",
         // },
         // preConsent: {
-        //   enabled: true
+        //   enabled: true,
+        //   storage: {
+        //     strategy: 'anonymousId'
+        //   }
         }
         // plugins: [
         //   'StorageEncryption',
