chore: update html file

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -122,7 +122,10 @@
         // preConsent: {
         //   enabled: true,
         //   storage: {
-        //     strategy: 'anonymousId'
+        //     strategy: 'session'
+        //   },
+        //   events: {
+        //     delivery: 'buffer'
         //   }
         }
         // plugins: [
