--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -20,6 +20,7 @@
         'setAnonymousId',
         'startSession',
         'endSession',
+        'consent'
       ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
