feat(analytics-js-loading-scripts): add version for loading snippet

--- a/examples/v3-beacon/index.html
+++ b/examples/v3-beacon/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>RudderStack JS SDK v3 Beacon Example</title>
     <script>
+      window.RudderSnippetVersion = "3.0.0-beta.13";
       var sdkBaseUrl = 'https://cdn.rudderlabs.com/v3';
       var sdkName = 'rsa.min.js';
       var asyncScript = true;
