--- a/packages/sanity-suite/public/v3/preloadBuffer/index-local.html
+++ b/packages/sanity-suite/public/v3/preloadBuffer/index-local.html
@@ -22,6 +22,7 @@
       };
       window.OnetrustActiveGroups = ',C0001,C0003,';
 
+      window.RudderSnippetVersion = "3.0.0-beta.13";
       var sdkBaseUrl = "https://cdn.rudderlabs.com/v3";
       var sdkName = "rsa.min.js";
       var asyncScript = true;
