--- a/packages/sanity-suite/public/v3/index-local.html
+++ b/packages/sanity-suite/public/v3/index-local.html
@@ -74,6 +74,20 @@
       }
       // New addition to load script ends
 
+      // Sets the user ID/anonymous ID
+      // Sending these Identify and Track event to test the preload buffer
+      rudderanalytics.setAnonymousId("automationqa_123");
+
+      // Identify call
+      rudderanalytics.identify("12345", {
+        name: "Automation_QA"
+      });
+
+      // Track call
+      rudderanalytics.track("test_event", {
+        testProp: "automationQA_prop1"
+      });
+
       var loadOptions={
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
@@ -88,10 +102,11 @@
           migrate: true
         },
         anonymousIdOptions: {
-        autoCapture: {
-          enabled: true,
-          source: "segment"
-        }}
+          autoCapture: {
+            enabled: true,
+            source: "segment"
+          }
+        }
       };
 
       rudderanalytics.load(
