--- a/packages/sanity-suite/public/v1.1/integrations/index-npm.html
+++ b/packages/sanity-suite/public/v1.1/integrations/index-npm.html
@@ -46,9 +46,6 @@
           };
         })(method);
       }
-
-      window.userWriteKey = '__FEATURE_DATA_RESIDENCY_WRITE_KEY__';
-      window.userConfigUrl = '__CONFIG_SERVER_HOST__';
     </script>
     <link
       rel="stylesheet"
@@ -85,11 +82,58 @@
         overflow: hidden;
       }
     </style>
+    <script>
+      $(document).ready(function(){
+        $("#manualLoadForm").submit(function(event){
+          event.preventDefault();
+          window.manualLoad(
+            $("#writeKey").val(),
+            $("#dataplaneURL").val(),
+            JSON.parse($("#loadOptions").val() ? $("#loadOptions").val() : {})
+          );
+        });
+      });
+    </script>
   </head>
   <body>
     <div class="container-xxl">
-      <div class="row ow px-4">
-        <div class="col" id="testBook"></div>
+      <div class="row px-4">
+        <div class="col" id="testBook">
+          <div class="row g-0 pt-4 pb-2 mb-2 border-bottom" style="background: #FFFFFF;">
+            <div class="col">
+              <h1>RudderStack JS SDK Sanity Suite</h1>
+              <p>
+                <button type="button" class="btn btn-secondary" onclick="window.location.reload()">
+                  Reset/Reload
+                </button>
+                <a href="/index.html" title="Auto SDK Load" class="btn btn-secondary">
+                  Auto SDK Load
+                </a>
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col mt-4 pt-2 pb-2">
+              <h2>Manual JS SDK load</h2>
+              <p>Fill in the form or invoke method "window.manualLoad" to load the SDk and start the Testbook</p>
+              <form id="manualLoadForm">
+                <div class="form-group">
+                  <label for="writeKey">WriteKey</label>
+                  <input type="text" class="form-control" id="writeKey" placeholder="<writeKey>">
+                </div>
+                <div class="form-group">
+                  <label for="dataplaneURL">Dataplane URL</label>
+                  <input type="text" class="form-control" id="dataplaneURL" placeholder="<dataplaneURL>">
+                </div>
+                <div class="form-group">
+                  <label for="loadOptions">LoadOptions (as JSON string)</label>
+                  <textarea class="form-control" id="loadOptions" rows="8" >{}</textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Load JS SDK</button>
+              </form>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
