--- a/packages/sanity-suite/public/v3/integrations/index-cdn.html
+++ b/packages/sanity-suite/public/v3/integrations/index-cdn.html
@@ -22,6 +22,7 @@
       };
       window.OnetrustActiveGroups = ',C0001,C0003,';
 
+      window.RudderSnippetVersion = "3.0.0-beta.13";
       var sdkBaseUrl = "https://cdn.rudderlabs.com/__CDN_VERSION_PATH__";
       var sdkName = "rsa.min.js";
       var asyncScript = true;
