--- a/examples/reactjs/vite/sample-app/index.html
+++ b/examples/reactjs/vite/sample-app/index.html
@@ -5,6 +5,37 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+    <script>
+      window.rudderanalytics = [];
+      var methods = [
+        'load',
+        'page',
+        'track',
+        'identify',
+        'alias',
+        'group',
+        'ready',
+        'reset',
+        'getAnonymousId',
+        'setAnonymousId',
+        'getUserId',
+        'getUserTraits',
+        'getGroupId',
+        'getGroupTraits',
+        'startSession',
+        'endSession',
+        'getSessionId',
+      ];
+      for (var i = 0; i < methods.length; i++) {
+        var method = methods[i];
+        window.rudderanalytics[method] = (function (methodName) {
+          return function () {
+            window.rudderanalytics.push([methodName].concat(Array.prototype.slice.call(arguments)));
+          };
+        })(method);
+      }
+      window.rudderanalytics.page('sample page call');
+    </script>
   </head>
   <body>
     <div id="root"></div>
