--- a/examples/angular/sample-app/src/index.html
+++ b/examples/angular/sample-app/src/index.html
@@ -35,6 +35,7 @@
         };
       })(method);
     }
+    // Below line is only for demonstration purpose, SPA code is better place for auto page call
     window.rudderanalytics.page('sample page call');
   </script>
 </head>
