--- a/examples/reactjs/js/sample-app/public/index.html
+++ b/examples/reactjs/js/sample-app/public/index.html
@@ -54,6 +54,7 @@
           };
         })(method);
       }
+      // Below line is only for demonstration purpose, SPA code is better place for auto page call
       window.rudderanalytics.page('sample page call');
     </script>
   </head>
