--- a/examples/reactjs/vite/sample-app/index.html
+++ b/examples/reactjs/vite/sample-app/index.html
@@ -34,6 +34,7 @@
           };
         })(method);
       }
+      // Below line is only for demonstration purpose, SPA code is better place for auto page call
       window.rudderanalytics.page('sample page call');
     </script>
   </head>
