--- a/examples/angular/sample-app/src/index.html
+++ b/examples/angular/sample-app/src/index.html
@@ -6,6 +6,38 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    window.rudderanalytics = [];
+    var methods = [
+      'load',
+      'page',
+      'track',
+      'identify',
+      'alias',
+      'group',
+      'ready',
+      'reset',
+      'getAnonymousId',
+      'setAnonymousId',
+      'getUserId',
+      'getUserTraits',
+      'getGroupId',
+      'getGroupTraits',
+      'startSession',
+      'endSession',
+      'getSessionId',
+    ];
+    for (var i = 0; i < methods.length; i++) {
+      var method = methods[i];
+      window.rudderanalytics[method] = (function (methodName) {
+        return function () {
+          window.rudderanalytics.push([methodName].concat(Array.prototype.slice.call(arguments)));
+        };
+      })(method);
+    }
+    // Below line is only for demonstration purpose, SPA code is better place for auto page call
+    window.rudderanalytics.page('sample page call');
+  </script>
 </head>
 <body>
   <app-root></app-root>
