--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -79,7 +79,8 @@
         configUrl: '__CONFIG_SERVER_HOST__',
         destSDKBaseURL:
           '__DEST_SDK_BASE_URL__' + window.rudderAnalyticsBuildType + '/js-integrations',
-        pluginsSDKBaseURL: '__PLUGINS_BASE_URL__' + window.rudderAnalyticsBuildType + '/plugins',
+        // pluginsSDKBaseURL: '__PLUGINS_BASE_URL__' + window.rudderAnalyticsBuildType + '/plugins',
+        // useServerSideCookie:true,        
         // queueOptions: {
         //   batch: {
         //     maxSize: 5 * 1024, // 5KB
