chore: updated loading snippets in examples and sample htmls

--- a/examples/angular/sample-app/src/index.html
+++ b/examples/angular/sample-app/src/index.html
@@ -7,25 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script>
+    window.RudderSnippetVersion = '3.0.1';
     window.rudderanalytics = [];
     var methods = [
+      'setDefaultInstanceKey',
       'load',
+      'ready',
       'page',
       'track',
       'identify',
       'alias',
       'group',
-      'ready',
       'reset',
-      'getAnonymousId',
       'setAnonymousId',
-      'getUserId',
-      'getUserTraits',
-      'getGroupId',
-      'getGroupTraits',
       'startSession',
       'endSession',
-      'getSessionId',
+      'consent'
     ];
     for (var i = 0; i < methods.length; i++) {
       var method = methods[i];
