--- a/examples/reactjs/hooks/sample-app/public/index.html
+++ b/examples/reactjs/hooks/sample-app/public/index.html
@@ -26,26 +26,23 @@
     -->
     <title>React App</title>
     <script>
-      window.rudderanalytics = [];
-      var methods = [
-        'load',
-        'page',
-        'track',
-        'identify',
-        'alias',
-        'group',
-        'ready',
-        'reset',
-        'getAnonymousId',
-        'setAnonymousId',
-        'getUserId',
-        'getUserTraits',
-        'getGroupId',
-        'getGroupTraits',
-        'startSession',
-        'endSession',
-        'getSessionId',
-      ];
+      window.RudderSnippetVersion = '3.0.1';
+    window.rudderanalytics = [];
+    var methods = [
+      'setDefaultInstanceKey',
+      'load',
+      'ready',
+      'page',
+      'track',
+      'identify',
+      'alias',
+      'group',
+      'reset',
+      'setAnonymousId',
+      'startSession',
+      'endSession',
+      'consent'
+    ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
         window.rudderanalytics[method] = (function (methodName) {
