--- a/examples/v3-beacon/index.html
+++ b/examples/v3-beacon/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>RudderStack JS SDK v3 Beacon Example</title>
     <script>
-      window.RudderSnippetVersion = "3.0.0-beta.18";
+      window.RudderSnippetVersion = '3.0.1';
       var sdkBaseUrl = 'https://cdn.rudderlabs.com/v3';
       var sdkName = 'rsa.min.js';
       var asyncScript = true;
@@ -22,11 +22,10 @@
         'alias',
         'group',
         'reset',
-        'getAnonymousId',
         'setAnonymousId',
         'startSession',
         'endSession',
-        'getSessionId',
+        'consent'
       ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
