--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script>
-      window.RudderSnippetVersion = "3.0.0-beta.18";
+      window.RudderSnippetVersion = '3.0.1';
       var sdkBaseUrl = 'https://cdn.rudderlabs.com/v3';
       var sdkName = 'rsa.min.js';
       var asyncScript = true;
