--- a/packages/sanity-suite/public/v3/index-local.html
+++ b/packages/sanity-suite/public/v3/index-local.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RudderStack JS SDK Sanity Suite</title>
 
     <script>
@@ -15,45 +15,62 @@
               { CustomGroupId: 'C0003', GroupName: 'Analytical Cookies' },
               { CustomGroupId: 'C0004', GroupName: 'Targeting Cookies' },
               { CustomGroupId: 'C0005', GroupName: 'Social Media Cookies' },
-              { CustomGroupId: 'C0006', GroupName: 'Advertisement Cookies' }
-            ]
+              { CustomGroupId: 'C0006', GroupName: 'Advertisement Cookies' },
+            ],
           };
-        }
+        },
       };
       window.OnetrustActiveGroups = ',C0001,C0003,';
 
-      window.RudderSnippetVersion = "3.0.0-beta.13";
-      var sdkBaseUrl = "https://cdn.rudderlabs.com/v3";
-      var sdkName = "rsa.min.js";
+      window.RudderSnippetVersion = '3.0.1';
+      var sdkBaseUrl = 'https://cdn.rudderlabs.com/v3';
+      var sdkName = 'rsa.min.js';
       var asyncScript = true;
-      window.rudderAnalyticsBuildType = "legacy";
+      window.rudderAnalyticsBuildType = 'legacy';
       window.rudderanalytics = [];
-      var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "setAnonymousId", "startSession", "endSession", "consent" ];
+      var methods = [
+        'setDefaultInstanceKey',
+        'load',
+        'ready',
+        'page',
+        'track',
+        'identify',
+        'alias',
+        'group',
+        'reset',
+        'setAnonymousId',
+        'startSession',
+        'endSession',
+        'consent',
+      ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
-        window.rudderanalytics[method] = function(methodName) {
-          return function() {
-            window.rudderanalytics.push([ methodName ].concat(Array.prototype.slice.call(arguments)));
+        window.rudderanalytics[method] = (function (methodName) {
+          return function () {
+            window.rudderanalytics.push([methodName].concat(Array.prototype.slice.call(arguments)));
           };
-        }(method);
+        })(method);
       }
       try {
         new Function('return import("")');
-        window.rudderAnalyticsBuildType = "modern";
+        window.rudderAnalyticsBuildType = 'modern';
       } catch (e) {}
-      window.rudderAnalyticsMount = function() {
+      window.rudderAnalyticsMount = function () {
         if (typeof globalThis === 'undefined') {
           Object.defineProperty(Object.prototype, '__globalThis_magic__', {
             get: function get() {
               return this;
             },
-            configurable: true
+            configurable: true,
           });
           __globalThis_magic__.globalThis = __globalThis_magic__;
           delete Object.prototype.__globalThis_magic__;
         }
-        var rudderAnalyticsScript = document.createElement("script");
-        rudderAnalyticsScript.src = "".concat(sdkBaseUrl, "/").concat(window.rudderAnalyticsBuildType, "/").concat(sdkName);
+        var rudderAnalyticsScript = document.createElement('script');
+        rudderAnalyticsScript.src = ''
+          .concat(sdkBaseUrl, '/')
+          .concat(window.rudderAnalyticsBuildType, '/')
+          .concat(sdkName);
         rudderAnalyticsScript.async = asyncScript;
         // if (document.head) {
         //   document.head.appendChild(rudderAnalyticsScript);
@@ -62,8 +79,9 @@
         // }
       };
       if (typeof Promise === 'undefined' || typeof globalThis === 'undefined') {
-        var rudderAnalyticsPromisesScript = document.createElement("script");
-        rudderAnalyticsPromisesScript.src = "https://polyfill.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount";
+        var rudderAnalyticsPromisesScript = document.createElement('script');
+        rudderAnalyticsPromisesScript.src =
+          'https://polyfill.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount';
         rudderAnalyticsPromisesScript.async = asyncScript;
         if (document.head) {
           document.head.appendChild(rudderAnalyticsPromisesScript);
@@ -77,44 +95,42 @@
 
       // Sets the user ID/anonymous ID
       // Sending these Identify and Track event to test the preload buffer
-      rudderanalytics.setAnonymousId("automationqa_123");
+      rudderanalytics.setAnonymousId('automationqa_123');
 
       // Identify call
-      rudderanalytics.identify("12345", {
-        name: "Automation_QA"
+      rudderanalytics.identify('12345', {
+        name: 'Automation_QA',
       });
 
       // Track call
-      rudderanalytics.track("test_event", {
-        testProp: "automationQA_prop1"
+      rudderanalytics.track('test_event', {
+        testProp: 'automationQA_prop1',
       });
 
-      var loadOptions={
+      var loadOptions = {
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: '__DEST_SDK_BASE_URL__' + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
-        pluginsSDKBaseURL: '__REMOTE_MODULES_BASE_PATH__' + '/' + window.rudderAnalyticsBuildType + '/plugins',
+        destSDKBaseURL:
+          '__DEST_SDK_BASE_URL__' + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
+        pluginsSDKBaseURL:
+          '__REMOTE_MODULES_BASE_PATH__' + '/' + window.rudderAnalyticsBuildType + '/plugins',
         lockIntegrationsVersion: true,
         consentManagement: {
           enabled: true,
-          provider: 'oneTrust'
+          provider: 'oneTrust',
         },
         storage: {
-          migrate: true
+          migrate: true,
         },
         anonymousIdOptions: {
           autoCapture: {
             enabled: true,
-            source: "segment"
-          }
-        }
+            source: 'segment',
+          },
+        },
       };
 
-      rudderanalytics.load(
-        '__WRITE_KEY__',
-        '__DATAPLANE_URL__',
-        loadOptions
-      );
+      rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', loadOptions);
 
       rudderanalytics.ready(function () {
         console.log('We are all set!!!');
@@ -127,22 +143,18 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
     <style>
       .collapsed-row pre {
@@ -156,14 +168,12 @@
       }
     </style>
     <script async src="./rsa.min.js"></script>
-</head>
-<body>
-
-<div class="container-xxl">
-    <div class="row px-4">
-        <div class="col" id="testBook">
-        </div>
+  </head>
+  <body>
+    <div class="container-xxl">
+      <div class="row px-4">
+        <div class="col" id="testBook"></div>
+      </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
