--- a/examples/reactjs/js/sample-app/public/index.html
+++ b/examples/reactjs/js/sample-app/public/index.html
@@ -26,25 +26,22 @@
     -->
     <title>React App</title>
     <script>
+      window.RudderSnippetVersion = '3.0.1';
       window.rudderanalytics = [];
       var methods = [
+        'setDefaultInstanceKey',
         'load',
+        'ready',
         'page',
         'track',
         'identify',
         'alias',
         'group',
-        'ready',
         'reset',
-        'getAnonymousId',
         'setAnonymousId',
-        'getUserId',
-        'getUserTraits',
-        'getGroupId',
-        'getGroupTraits',
         'startSession',
         'endSession',
-        'getSessionId',
+        'consent'
       ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
