--- a/examples/reactjs/vite/sample-app/index.html
+++ b/examples/reactjs/vite/sample-app/index.html
@@ -6,25 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
     <script>
+      window.RudderSnippetVersion = '3.0.1';
       window.rudderanalytics = [];
       var methods = [
+        'setDefaultInstanceKey',
         'load',
+        'ready',
         'page',
         'track',
         'identify',
         'alias',
         'group',
-        'ready',
         'reset',
-        'getAnonymousId',
         'setAnonymousId',
-        'getUserId',
-        'getUserTraits',
-        'getGroupId',
-        'getGroupTraits',
         'startSession',
         'endSession',
-        'getSessionId',
+        'consent'
       ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
