--- a/packages/sanity-suite/public/v3/index-cdn.html
+++ b/packages/sanity-suite/public/v3/index-cdn.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -15,45 +15,62 @@
               { CustomGroupId: 'C0003', GroupName: 'Analytical Cookies' },
               { CustomGroupId: 'C0004', GroupName: 'Targeting Cookies' },
               { CustomGroupId: 'C0005', GroupName: 'Social Media Cookies' },
-              { CustomGroupId: 'C0006', GroupName: 'Advertisement Cookies' }
-            ]
+              { CustomGroupId: 'C0006', GroupName: 'Advertisement Cookies' },
+            ],
           };
-        }
+        },
       };
       window.OnetrustActiveGroups = ',C0001,C0003,';
 
-      window.RudderSnippetVersion = "3.0.0-beta.13";
-      var sdkBaseUrl = "https://cdn.rudderlabs.com/__CDN_VERSION_PATH__";
-      var sdkName = "rsa.min.js";
+      window.RudderSnippetVersion = '3.0.1';
+      var sdkBaseUrl = 'https://cdn.rudderlabs.com/__CDN_VERSION_PATH__';
+      var sdkName = 'rsa.min.js';
       var asyncScript = true;
-      window.rudderAnalyticsBuildType = "legacy";
+      window.rudderAnalyticsBuildType = 'legacy';
       window.rudderanalytics = [];
-      var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "setAnonymousId", "startSession", "endSession", "consent" ];
+      var methods = [
+        'setDefaultInstanceKey',
+        'load',
+        'ready',
+        'page',
+        'track',
+        'identify',
+        'alias',
+        'group',
+        'reset',
+        'setAnonymousId',
+        'startSession',
+        'endSession',
+        'consent',
+      ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
-        window.rudderanalytics[method] = function(methodName) {
-          return function() {
-            window.rudderanalytics.push([ methodName ].concat(Array.prototype.slice.call(arguments)));
+        window.rudderanalytics[method] = (function (methodName) {
+          return function () {
+            window.rudderanalytics.push([methodName].concat(Array.prototype.slice.call(arguments)));
           };
-        }(method);
+        })(method);
       }
       try {
         new Function('return import("")');
-        window.rudderAnalyticsBuildType = "modern";
+        window.rudderAnalyticsBuildType = 'modern';
       } catch (e) {}
-      window.rudderAnalyticsMount = function() {
+      window.rudderAnalyticsMount = function () {
         if (typeof globalThis === 'undefined') {
           Object.defineProperty(Object.prototype, '__globalThis_magic__', {
             get: function get() {
               return this;
             },
-            configurable: true
+            configurable: true,
           });
           __globalThis_magic__.globalThis = __globalThis_magic__;
           delete Object.prototype.__globalThis_magic__;
         }
-        var rudderAnalyticsScript = document.createElement("script");
-        rudderAnalyticsScript.src = "".concat(sdkBaseUrl, "/").concat(window.rudderAnalyticsBuildType, "/").concat(sdkName);
+        var rudderAnalyticsScript = document.createElement('script');
+        rudderAnalyticsScript.src = ''
+          .concat(sdkBaseUrl, '/')
+          .concat(window.rudderAnalyticsBuildType, '/')
+          .concat(sdkName);
         rudderAnalyticsScript.async = asyncScript;
         if (document.head) {
           document.head.appendChild(rudderAnalyticsScript);
@@ -62,8 +79,9 @@
         }
       };
       if (typeof Promise === 'undefined' || typeof globalThis === 'undefined') {
-        var rudderAnalyticsPromisesScript = document.createElement("script");
-        rudderAnalyticsPromisesScript.src = "https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount";
+        var rudderAnalyticsPromisesScript = document.createElement('script');
+        rudderAnalyticsPromisesScript.src =
+          'https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount';
         rudderAnalyticsPromisesScript.async = asyncScript;
         if (document.head) {
           document.head.appendChild(rudderAnalyticsPromisesScript);
@@ -77,43 +95,39 @@
 
       // Sets the user ID/anonymous ID
       // Sending these Identify and Track event to test the preload buffer
-      rudderanalytics.setAnonymousId("automationqa_123");
+      rudderanalytics.setAnonymousId('automationqa_123');
 
       // Identify call
-      rudderanalytics.identify("12345", {
-        name: "Automation_QA"
+      rudderanalytics.identify('12345', {
+        name: 'Automation_QA',
       });
 
       // Track call
-      rudderanalytics.track("test_event", {
-        testProp: "automationQA_prop1"
+      rudderanalytics.track('test_event', {
+        testProp: 'automationQA_prop1',
       });
 
-      var loadOptions={
+      var loadOptions = {
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
         destSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
         pluginsSDKBaseURL: sdkBaseUrl + '/' + window.rudderAnalyticsBuildType + '/plugins',
         consentManagement: {
           enabled: true,
-          provider: 'oneTrust'
+          provider: 'oneTrust',
         },
         storage: {
-          migrate: true
+          migrate: true,
         },
         anonymousIdOptions: {
           autoCapture: {
             enabled: true,
-            source: "segment"
-          }
-        }
+            source: 'segment',
+          },
+        },
       };
 
-      rudderanalytics.load(
-        '__WRITE_KEY__',
-        '__DATAPLANE_URL__',
-        loadOptions
-      );
+      rudderanalytics.load('__WRITE_KEY__', '__DATAPLANE_URL__', loadOptions);
 
       rudderanalytics.ready(function () {
         console.log('We are all set!!!');
@@ -151,9 +165,9 @@
       }
     </style>
 
-<!--    <script-->
-<!--      async-->
-<!--      src="https://cdn.rudderlabs.com/__CDN_VERSION_PATH__rsa.min.js"></script>-->
+    <!--    <script-->
+    <!--      async-->
+    <!--      src="https://cdn.rudderlabs.com/__CDN_VERSION_PATH__rsa.min.js"></script>-->
   </head>
   <body>
     <div class="container-xxl">
