--- a/packages/sanity-suite/public/v3/manualLoadCall/index-local.html
+++ b/packages/sanity-suite/public/v3/manualLoadCall/index-local.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RudderStack JS SDK Sanity Suite</title>
 
     <script>
@@ -15,45 +15,62 @@
               { CustomGroupId: 'C0003', GroupName: 'Analytical Cookies' },
               { CustomGroupId: 'C0004', GroupName: 'Targeting Cookies' },
               { CustomGroupId: 'C0005', GroupName: 'Social Media Cookies' },
-              { CustomGroupId: 'C0006', GroupName: 'Advertisement Cookies' }
-            ]
+              { CustomGroupId: 'C0006', GroupName: 'Advertisement Cookies' },
+            ],
           };
-        }
+        },
       };
       window.OnetrustActiveGroups = ',C0001,C0003,';
 
-      window.RudderSnippetVersion = "3.0.0-beta.13";
-      var sdkBaseUrl = "https://cdn.rudderlabs.com/v3";
-      var sdkName = "rsa.min.js";
+      window.RudderSnippetVersion = '3.0.1';
+      var sdkBaseUrl = 'https://cdn.rudderlabs.com/v3';
+      var sdkName = 'rsa.min.js';
       var asyncScript = true;
-      window.rudderAnalyticsBuildType = "legacy";
+      window.rudderAnalyticsBuildType = 'legacy';
       window.rudderanalytics = [];
-      var methods = [ "setDefaultInstanceKey", "load", "ready", "page", "track", "identify", "alias", "group", "reset", "setAnonymousId", "startSession", "endSession", "consent" ];
+      var methods = [
+        'setDefaultInstanceKey',
+        'load',
+        'ready',
+        'page',
+        'track',
+        'identify',
+        'alias',
+        'group',
+        'reset',
+        'setAnonymousId',
+        'startSession',
+        'endSession',
+        'consent',
+      ];
       for (var i = 0; i < methods.length; i++) {
         var method = methods[i];
-        window.rudderanalytics[method] = function(methodName) {
-          return function() {
-            window.rudderanalytics.push([ methodName ].concat(Array.prototype.slice.call(arguments)));
+        window.rudderanalytics[method] = (function (methodName) {
+          return function () {
+            window.rudderanalytics.push([methodName].concat(Array.prototype.slice.call(arguments)));
           };
-        }(method);
+        })(method);
       }
       try {
         new Function('return import("")');
-        window.rudderAnalyticsBuildType = "modern";
+        window.rudderAnalyticsBuildType = 'modern';
       } catch (e) {}
-      window.rudderAnalyticsMount = function() {
+      window.rudderAnalyticsMount = function () {
         if (typeof globalThis === 'undefined') {
           Object.defineProperty(Object.prototype, '__globalThis_magic__', {
             get: function get() {
               return this;
             },
-            configurable: true
+            configurable: true,
           });
           __globalThis_magic__.globalThis = __globalThis_magic__;
           delete Object.prototype.__globalThis_magic__;
         }
-        var rudderAnalyticsScript = document.createElement("script");
-        rudderAnalyticsScript.src = "".concat(sdkBaseUrl, "/").concat(window.rudderAnalyticsBuildType, "/").concat(sdkName);
+        var rudderAnalyticsScript = document.createElement('script');
+        rudderAnalyticsScript.src = ''
+          .concat(sdkBaseUrl, '/')
+          .concat(window.rudderAnalyticsBuildType, '/')
+          .concat(sdkName);
         rudderAnalyticsScript.async = asyncScript;
         // if (document.head) {
         //   document.head.appendChild(rudderAnalyticsScript);
@@ -62,8 +79,9 @@
         // }
       };
       if (typeof Promise === 'undefined' || typeof globalThis === 'undefined') {
-        var rudderAnalyticsPromisesScript = document.createElement("script");
-        rudderAnalyticsPromisesScript.src = "https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount";
+        var rudderAnalyticsPromisesScript = document.createElement('script');
+        rudderAnalyticsPromisesScript.src =
+          'https://polyfill-fastly.io/v3/polyfill.min.js?version=3.111.0&features=Symbol%2CPromise&callback=rudderAnalyticsMount';
         rudderAnalyticsPromisesScript.async = asyncScript;
         if (document.head) {
           document.head.appendChild(rudderAnalyticsPromisesScript);
@@ -75,29 +93,27 @@
       }
       // New addition to load script ends
 
-      var loadOptions={
+      var loadOptions = {
         logLevel: 'DEBUG',
         configUrl: '__CONFIG_SERVER_HOST__',
-        destSDKBaseURL: '__DEST_SDK_BASE_URL__' + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
-        pluginsSDKBaseURL: '__REMOTE_MODULES_BASE_PATH__' + '/' + window.rudderAnalyticsBuildType + '/plugins',
+        destSDKBaseURL:
+          '__DEST_SDK_BASE_URL__' + '/' + window.rudderAnalyticsBuildType + '/js-integrations',
+        pluginsSDKBaseURL:
+          '__REMOTE_MODULES_BASE_PATH__' + '/' + window.rudderAnalyticsBuildType + '/plugins',
         lockIntegrationsVersion: true,
         consentManagement: {
           enabled: true,
-          provider: 'oneTrust'
+          provider: 'oneTrust',
         },
         storage: {
-          migrate: true
-        }
+          migrate: true,
+        },
       };
 
-      window.manualLoad = function(writeKey, dataplane, manualLoadOptions) {
+      window.manualLoad = function (writeKey, dataplane, manualLoadOptions) {
         var loadOpts = manualLoadOptions || loadOptions;
 
-        rudderanalytics.load(
-          writeKey,
-          dataplane,
-          loadOpts
-        );
+        rudderanalytics.load(writeKey, dataplane, loadOpts);
 
         window.userWriteKey = writeKey;
         window.userConfigUrl = loadOpts.configUrl;
@@ -111,22 +127,18 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
       integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css"
-    />
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" />
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js"></script>
     <style>
       .collapsed-row pre {
@@ -140,13 +152,13 @@
       }
     </style>
     <script>
-      $(document).ready(function(){
-        $("#manualLoadForm").submit(function(event){
+      $(document).ready(function () {
+        $('#manualLoadForm').submit(function (event) {
           event.preventDefault();
           window.manualLoad(
-            $("#writeKey").val(),
-            $("#dataplaneURL").val(),
-            JSON.parse($("#loadOptions").val() ? $("#loadOptions").val() : {})
+            $('#writeKey').val(),
+            $('#dataplaneURL').val(),
+            JSON.parse($('#loadOptions').val() ? $('#loadOptions').val() : {}),
           );
         });
       });
@@ -157,7 +169,7 @@
     <div class="container-xxl">
       <div class="row px-4">
         <div class="col" id="testBook">
-          <div class="row g-0 pt-4 pb-2 mb-2 border-bottom" style="background: #FFFFFF;">
+          <div class="row g-0 pt-4 pb-2 mb-2 border-bottom" style="background: #ffffff">
             <div class="col">
               <h1>RudderStack JS SDK Sanity Suite</h1>
               <p>
@@ -173,19 +185,26 @@
           <div class="row">
             <div class="col mt-4 pt-2 pb-2">
               <h2>Manual JS SDK load</h2>
-              <p>Fill in the form or invoke method "window.manualLoad" to load the SDk and start the Testbook</p>
+              <p>
+                Fill in the form or invoke method "window.manualLoad" to load the SDk and start the
+                Testbook
+              </p>
               <form id="manualLoadForm">
                 <div class="form-group">
                   <label for="writeKey">WriteKey</label>
-                  <input type="text" class="form-control" id="writeKey" placeholder="<writeKey>">
+                  <input type="text" class="form-control" id="writeKey" placeholder="<writeKey>" />
                 </div>
                 <div class="form-group">
                   <label for="dataplaneURL">Dataplane URL</label>
-                  <input type="text" class="form-control" id="dataplaneURL" placeholder="<dataplaneURL>">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="dataplaneURL"
+                    placeholder="<dataplaneURL>" />
                 </div>
                 <div class="form-group">
                   <label for="loadOptions">LoadOptions (as JSON string)</label>
-                  <textarea class="form-control" id="loadOptions" rows="8" >{}</textarea>
+                  <textarea class="form-control" id="loadOptions" rows="8">{}</textarea>
                 </div>
                 <button type="submit" class="btn btn-primary">Load JS SDK</button>
               </form>
