chore: address review comment

--- a/packages/analytics-js/public/index.html
+++ b/packages/analytics-js/public/index.html
@@ -80,7 +80,7 @@
         destSDKBaseURL:
           '__DEST_SDK_BASE_URL__' + window.rudderAnalyticsBuildType + '/js-integrations',
         pluginsSDKBaseURL: '__PLUGINS_BASE_URL__' + window.rudderAnalyticsBuildType + '/plugins',
-        // useServerSideCookie:true,        
+        useServerSideCookies:true,        
         // queueOptions: {
         //   batch: {
         //     maxSize: 5 * 1024, // 5KB
